--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,8 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Scott</h2>
+                <h2>About Me</h2>
+                <p>I am a full-stack web developer with a background in international education and journalism.
             </div>
         </div>
     </section>
