--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,26 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Projects</h2>
-                    
+                    <div class='project-holder row card-deck-wrapper'>
+                    <div class="card-deck">
+                    {% assign sorted = {site.projects | sort:'number'} %}
+                    {% for project in sorted %}
+                    <div class="project card col-xs-6 col-md-6">
+                      <h3 class="card-header">{{ project.title }}</h3>
+                      <img class='card-img-top project-screenshot' src="/img/{{ project.screenshot }}" alt='{{ project.title }}' />
+                      <br />
+                      <br />
+                      <div class="card-block">
+                        <p class="card-text">{{ project.description }}</p>
+                        <p class='techs'>Technologies used: {{ project.technologies }}</p>
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                            <a class="btn btn-secondary" href="{{ project.deployed }}">Preview</a> <a class="btn btn-secondary" href="{{ project.github }}">Code</a>
+                        </div>
+                      </div>
+                    </div>
+                    {% endfor %}
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
