Update about me with initial bio

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p>I am a full-stack web developer with a background in international education and journalism.
+                <p>I am a full-stack web developer passionate about making meaningful things, learning new technologies and proper commit messages. I have been an English teacher in Japan and a business/tech reporter in New York. I am open to and actively looking for new opportunities as a developer.
             </div>
         </div>
     </section>
