--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>{{ site.footer }} 20{{ site.time | date: '%y' }}</p>
+            <p>&copy;{{ site.footer }} 20{{ site.time | date: '%y' }} Scott Dixon | Jekyll theme based on <a href='https://startbootstrap.com/template-overviews/grayscale/'>Grayscale Bootstrap</a></p>
         </div>
     </footer>
