Remove sidebar issue

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <div class="container text-center">
-        <p>&copy;{{ site.footer }} 20{{ site.time | date: '%y' }} Scott Dixon | Jekyll theme based on <a href='https://startbootstrap.com/template-overviews/grayscale/'>Grayscale Bootstrap</a></p>
+        <p>Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}</p>
     </div>
 </footer>
