--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="intro">
     <div class="intro-body">
-        <div class="container">
+        <div class="container intro-container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h1 class="brand-heading">{{ site.title }}</h1>
